installed daisy ui

--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<div class="btn bg-red-600">random text</div><router-outlet></router-outlet>
