first try of many implementing this circled navigation

--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -1,1 +1,34 @@
-<div class="btn bg-red-600">random text</div><router-outlet></router-outlet>
+<div class="btn bg-red-600">random text</div>
+<div class="flex justify-center items-center h-screen">
+    <div class="circle">
+        <div class="text-[2.5rem]">
+            <span class="char1">s</span>
+            <span class="char2">c</span>
+            <span class="char3">o</span>
+            <span class="char4">r</span>
+            <span class="char5">e</span>
+        </div>
+        <div class="text-[2.5rem]">
+            <span class="char1">g</span>
+            <span class="char2">a</span>
+            <span class="char3">m</span>
+            <span class="char4">e</span>
+        </div>
+        <div class="text-[2.5rem]">
+            <span class="char1">s</span>
+            <span class="char2">t</span>
+            <span class="char3">a</span>
+            <span class="char4">t</span>
+            <span class="char5">s</span>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="flex justify-center items-center h-screen">
+    <div class="text-[12rem]">8</div>
+    <img src="../assets/images/Sprite-0003.png" class="transform rotate-90 ...">
+    <div class="text-[12rem]">6</div>
+</div>
+<router-outlet></router-outlet>
