--- a/frontend/dig-kick-fe/src/styles.scss
+++ b/frontend/dig-kick-fe/src/styles.scss
@@ -3,3 +3,14 @@
 @tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
+@layer base {
+    @font-face {
+        font-family: 'pixel';
+        src: url("assets/fonts/PixelifySans-VariableFont_wght.ttf");
+    }
+}
+
+body {
+    font-family: 'pixel';
+    color: #4f9066;
+}
