--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -1,34 +1,15 @@
-<div class="btn bg-red-600">random text</div>
-<div class="flex justify-center items-center h-screen">
-    <div class="circle">
-        <div class="text-[2.5rem]">
-            <span class="char1">s</span>
-            <span class="char2">c</span>
-            <span class="char3">o</span>
-            <span class="char4">r</span>
-            <span class="char5">e</span>
-        </div>
-        <div class="text-[2.5rem]">
-            <span class="char1">g</span>
-            <span class="char2">a</span>
-            <span class="char3">m</span>
-            <span class="char4">e</span>
-        </div>
-        <div class="text-[2.5rem]">
-            <span class="char1">s</span>
-            <span class="char2">t</span>
-            <span class="char3">a</span>
-            <span class="char4">t</span>
-            <span class="char5">s</span>
-        </div>
-    </div>
+<div class="nav flex justify-between items-center mt-3 mx-auto w-5/6 lg:mx-auto lg:w-2/5">
+    <div class="text-[2rem] lg:text-[2.5rem]">game</div>
+    <div class="text-[2rem] text-orange-400 lg:text-[3rem]">|</div>
+    <div class="text-[2rem] lg:text-[2.5rem]">score</div>
+    <div class="text-[2rem] text-orange-400 lg:text-[3rem]">|</div>
+    <div class="text-[2rem] lg:text-[2.5rem]">stats</div>
 </div>
 
-
-
-<div class="flex justify-center items-center h-screen">
-    <div class="text-[12rem]">8</div>
+<div class="flex flex-col lg:flex-row justify-center items-center">
+    <div class="text-[6rem] lg:text-[12rem] lg:mr-20">8</div>
     <img src="../assets/images/Sprite-0003.png" class="transform rotate-90 ...">
-    <div class="text-[12rem]">6</div>
+    <div class="text-[6rem] lg:text-[12rem] lg:ml-20">6</div>
 </div>
+
 <router-outlet></router-outlet>
