--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -1,4 +1,5 @@
 
+<app-navbar></app-navbar>
 <div class="flex flex-col lg:flex-row justify-center items-center mt-3 mx-auto w-5/6 lg:mx-auto lg:w-2/3">
     <!-- Mobile view -->
     <div class="flex justify-between items-center mx-auto w-3/5 lg:hidden">
