--- a/frontend/dig-kick-fe/src/app/core/static/components/navbar/navbar.component.html
+++ b/frontend/dig-kick-fe/src/app/core/static/components/navbar/navbar.component.html
@@ -1,7 +1,19 @@
-<div class="nav flex justify-between items-center mt-3 mx-auto w-5/6 lg:mx-auto lg:w-2/5">
-    <div class="text-[2rem] lg:text-[2.5rem]">game</div>
-    <div class="text-[2rem] text-orange-400 lg:text-[3rem]">|</div>
-    <div class="text-[2rem] lg:text-[2.5rem]">score</div>
-    <div class="text-[2rem] text-orange-400 lg:text-[3rem]">|</div>
-    <div class="text-[2rem] lg:text-[2.5rem]">stats</div>
+<div class="nav flex flex-col justify-center lg:justify-between items-center mt-3 mx-auto lg:w-2/5">
+    <nav>
+        <ul class="flex items-center">
+            <li class="mr-3">
+                <a routerLink="/" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">game</a>
+            </li>
+            <li class="mr-3">
+                <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
+            </li>
+            <li class="mr-3">
+                <a routerLink="/score" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">score</a>
+            </li>
+            <li class="mr-3">
+                <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
+            </li>
+            <li class="text-[2rem] lg:text-[2.5rem]">stats</li>
+        </ul>
+    </nav>
 </div>
