implemented table-view

--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -1,1 +1,16 @@
-<p>score-view works!</p>
+<p>
+    _                         _
+   |_|                       |_|
+   | |         /^^^\         | |
+  _| |_      (| "o" |)      _| |_
+_| | | | _    (_---_)    _ | | | |_ 
+| | | | |' |    _| |_    | `| | | | |
+\          /   /     \   \          /
+\        /  / /(. .)\ \  \        /
+  \    /  / /  | . |  \ \  \    /
+    \  \/ /    ||Y||    \ \/  /
+      \_/      || ||      \_/
+               () ()
+               || ||
+              ooO Ooo
+</p>
