implemented path param routing

--- a/frontend/dig-kick-fe/src/app/core/static/components/navbar/navbar.component.html
+++ b/frontend/dig-kick-fe/src/app/core/static/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <nav>
         <ul class="flex items-center">
             <li class="mr-3">
-                <a routerLink="/" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">game</a>
+                <a routerLink="/" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">games</a>
             </li>
             <li class="mr-3">
                 <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
