--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="card-actions justify-end m-3">
-        <button class="btn btn-primary">View</button>
+        <button class="btn btn-primary" [routerLink]="['/game', game1.id]">View</button>
       </div>
     </div>
   </div>
