changed color of tiles

--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -1,7 +1,7 @@
 <div class="grid-layout">
-    <div class="card card-compact w-64 md:w-80 bg-base-100 shadow-xl mt-4 md:mt-8 mx-auto">
+    <div class="card card-compact w-64 md:w-80 bg-base-100 shadow-xl mt-4 md:mt-8 mx-auto bg-accent-content">
       <figure><img src="../assets/images/fun_table{{random}}.png" alt="table" class="mx-auto w-full"></figure>
-      <div class="card-body grid grid-cols-3 gap-x-4 items-center">
+      <div class="card-body grid grid-cols-3 gap-x-4 items-center ">
         <div class="flex flex-col justify-center pl-2 lg:pl-8 text-[1rem]">
           <p class="mb-1">player1</p>
           <p class="mt-0">player2</p>
