--- a/frontend/dig-kick-fe/src/styles.scss
+++ b/frontend/dig-kick-fe/src/styles.scss
@@ -6,7 +6,7 @@
 @layer base {
     @font-face {
         font-family: 'pixel';
-        src: url("assets/fonts/PixelifySans-VariableFont_wght.ttf");
+        src: url("assets/fonts/edit.ttf");
     }
 }
 
