--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -1,20 +1,22 @@
-<div class="overflow-x-auto mt-[3rem]">
-  <table class="table table-zebra">
-    <!-- head -->
-    <thead class="text-[1.5rem]">
-      <tr>
-        <th></th>
-        <th>Name</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- loop over players and generate rows -->
-      <tr *ngFor="let player of data; let i = index" class="text-[1.25rem]">
-        <th>{{ i + 1 }}</th>
-        <td>{{ player.firstname }} {{ player.lastname }}</td>
-        <td>{{ player.score }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="md:container md:mx-auto">
+  <div class=" overflow-x-auto mt-[3rem]">
+    <table class="table table-zebra">
+      <!-- head -->
+      <thead class="text-[1.5rem]">
+        <tr>
+          <th></th>
+          <th>Name</th>
+          <th>Score</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- loop over players and generate rows -->
+        <tr *ngFor="let player of data; let i = index" class="text-[1.25rem]">
+          <th>{{ i + 1 }}</th>
+          <td>{{ player.firstname }} {{ player.lastname }}</td>
+          <td>{{ player.score }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
