--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between">
+<div class="flex items-center justify-between mt-2">
     <!-- Linker Bereich (leer) -->
     <div class="flex-1"></div>
 
@@ -9,7 +9,7 @@
     </div>
 
     <!-- Rechter Bereich (Button) -->
-    <div class="flex-1 flex justify-start ml-3 h-6 lg:h-8">
+    <div class="flex-1 flex justify-start ml-3 h-7 lg:h-8">
         <app-theme-toggle-button></app-theme-toggle-button>
     </div>
 </div>
