--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -6,15 +6,15 @@
         <tr>
           <th></th>
           <th>Name</th>
-          <th>Score</th>
+          <th class="text-right">Score</th>
         </tr>
       </thead>
       <tbody>
         <!-- loop over players and generate rows -->
         <tr *ngFor="let player of data; let i = index" class="text-[1.25rem]">
-          <th>{{ i + 1 }}</th>
+          <th class="text-right">{{ i + 1 }}</th>
           <td>{{ player.firstname }} {{ player.lastname }}</td>
-          <td>{{ player.score }}</td>
+          <td class="text-right">{{ player.score }}</td>
         </tr>
       </tbody>
     </table>
