--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="card-actions justify-center m-3">
-      <button class="btn btn-wide items-center btn-primary text-[1.25rem]"
+      <button class="btn btn-wide items-center btn-primary text-[1.25rem] btn-outline"
         [routerLink]="['/game', game1.id]">View</button>
     </div>
   </div>
