design changes score table

--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -1,6 +1,6 @@
 <div class="md:container md:mx-auto">
-  <div class=" overflow-x-auto mt-[3rem]">
-    <table class="table table-zebra">
+  <div class="overflow-x-auto mt-[3rem]">
+    <table class=" bg-base-300 table table-zebra lg:w-[40%] lg:md:w-[50%] mx-auto">
       <!-- head -->
       <thead class="text-[1.5rem]">
         <tr>
