--- a/frontend/dig-kick-fe/src/app/app.component.html
+++ b/frontend/dig-kick-fe/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <!-- Rechter Bereich (Button) -->
-    <div class="flex-1 flex justify-start ml-3 h-7 lg:h-8">
+    <div class="flex-1 flex justify-start ml-1 lg:ml-3 h-8 lg:h-8">
         <app-theme-toggle-button></app-theme-toggle-button>
     </div>
 </div>
