adjusted design game view

--- a/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
@@ -18,9 +18,9 @@
 
     <!-- Desktop view -->
     <div class="hidden lg:flex justify-between items-center w-full">
-        <div class="text-[6rem] lg:text-[12rem]">8</div>
+        <div class="lg:text-[12rem] flex justify-center items-center mx-auto w-1/5 h-60 lg:h-auto lg:max-h-32 bg-accent-content rounded-lg">8</div>
         <img src="../assets/images/Sprite-0003.png" class="transform rotate-90 ...">
-        <div class="text-[6rem] lg:text-[12rem]">6</div>
+        <div class="lg:text-[12rem] flex justify-center items-center mx-auto w-1/5 h-60 lg:h-auto lg:max-h-32 bg-accent-content rounded-lg">6</div>
     </div>
 </div>
 
