--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -14,7 +14,7 @@
         <tr *ngFor="let player of data; let i = index" class="text-[1.25rem]">
           <th class="text-right">{{ i + 1 }}</th>
           <td>{{ player.firstname }} {{ player.lastname }}</td>
-          <td class="text-right">{{ player.score }}</td>
+          <td class="text-right text-orange-400">{{ player.score }}</td>
         </tr>
       </tbody>
     </table>
