changed margin to rem

--- a/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
@@ -18,9 +18,9 @@
 
     <!-- Desktop view -->
     <div class="hidden lg:flex items-center justify-center "> 
-        <div class="flex items-center space-x-40"> 
+        <div class="flex items-center space-x-[6rem]"> 
             <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">{{white.score}}</div>
-            <img src="../assets/images/Sprite-0003.png" class="rotate-90 h-full mx-50" alt="Your Image">
+            <img src="../assets/images/Sprite-0003.png" class="rotate-90 h-full" alt="Your Image">
             <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">{{black.score}}</div>
         </div>
     </div>
