--- a/frontend/dig-kick-fe/src/styles.scss
+++ b/frontend/dig-kick-fe/src/styles.scss
@@ -8,6 +8,10 @@
         font-family: 'pixel';
         src: url("assets/fonts/edit.ttf");
     }
+    @font-face {
+        font-family: 'ranked';
+        src: url('assets/fonts/8-bitanco.ttf');
+    }
 }
 
 body {
