--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -6,13 +6,13 @@
         <p class="mb-1">player1</p>
         <p class="mt-0">player2</p>
       </div>
-      <p class="col-span-1 text-center text-[3rem]">{{this.scoreService.whiteScoreSignal()}}:{{team2.score}}</p>
+      <p class="col-span-1 text-center text-[3rem]">{{whiteScoreSignal()}}:{{blackScoreSignal()}}</p>
       <div class="flex flex-col justify-center pr-4 text-[1.1rem]">
         <p class="mb-1">player3</p>
         <p class="mt-0">player4</p>
       </div>
     </div>
-    <div class="card-actions justify-center m-3">
+    <div class="card-actions justify-center m-3" *ngIf="tableId">
       <button class="btn btn-wide w-5/6 items-center btn-primary text-[1.25rem] btn-outline"
         [routerLink]="['/game', tableId]">View</button>
     </div>
