in gameview sub to score only

--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -6,7 +6,7 @@
         <p class="mb-1">player1</p>
         <p class="mt-0">player2</p>
       </div>
-      <p class="col-span-1 text-center text-[3rem]">{{scoreService.whiteScoreSignal()}}:{{scoreService.blackScoreSignal()}}</p>
+      <p class="col-span-1 text-center text-[3rem]">{{this.scoreService.whiteScoreSignal()}}:{{this.scoreService.blackScoreSignal()}}</p>
       <div class="flex flex-col justify-center pr-4 text-[1.1rem]">
         <p class="mb-1">player3</p>
         <p class="mt-0">player4</p>
