score conntected to pub/sub & redefined models to actual models

--- a/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -1,15 +1,17 @@
 <div class="grid-layout">
+
   <div class="card card-compact w-64 md:w-80  shadow-xl mt-4 md:mt-8 mx-auto bg-accent-content">
     <figure><img src="../assets/images/fun_table{{random}}.png" alt="table" class="mx-auto w-full"></figure>
     <div class="card-body grid grid-cols-3 gap-x-4 items-center mt-1">
       <div class="flex flex-col justify-center pl-2 lg:pl-8 text-[1.1rem]">
-        <p class="mb-1">player1</p>
-        <p class="mt-0">player2</p>
+        <p class="mb-1">{{gameService.gameSignal().teamWhite.playerOne?.name}}</p>
+        <p class="mt-0">{{gameService.gameSignal().teamWhite.playerTwo?.name}}</p>
       </div>
-      <p class="col-span-1 text-center text-[3rem]">{{this.gameService.whiteScoreSignal()}}:{{this.gameService.blackScoreSignal()}}</p>
+      <p class="col-span-1 text-center text-[3rem]">
+        {{gameService.gameSignal().teamWhite.score}}:{{gameService.gameSignal().teamBlack.score}}</p>
       <div class="flex flex-col justify-center pr-4 text-[1.1rem]">
-        <p class="mb-1">player3</p>
-        <p class="mt-0">player4</p>
+        <p class="mb-1">{{gameService.gameSignal().teamBlack.playerOne?.name}}</p>
+        <p class="mt-0">{{gameService.gameSignal().teamBlack.playerTwo?.name}}</p>
       </div>
     </div>
     <div class="card-actions justify-center m-3" *ngIf="tableId">
