--- a/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
@@ -2,9 +2,9 @@
     <!-- Mobile view -->
     <div class="flex justify-center items-center mx-auto card h-32 w-64 bg-accent-content rounded-lg lg:hidden">
         <div class="flex justify-center items-center">
-            <div class="text-[6rem] mr-3">{{this.gameService.whiteScoreSignal()}}</div>
+            <div class="text-[6rem] mr-3">{{this.gameService.gameSignal().teamWhite.score}}</div>
             <div class="text-[6rem]">:</div>
-            <div class="text-[6rem] ml-3">{{this.gameService.blackScoreSignal()}}</div>
+            <div class="text-[6rem] ml-3">{{this.gameService.gameSignal().teamBlack.score}}</div>
         </div>
     </div>
 
@@ -17,30 +17,82 @@
     </div>
 
     <!-- Desktop view -->
-    <div class="hidden lg:flex items-center justify-center "> 
-        <div class="flex items-center space-x-[6rem]"> 
-            <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">{{this.gameService.whiteScoreSignal()}}</div>
+    <div class="hidden lg:flex items-center justify-center ">
+        <div class="flex items-center space-x-[6rem]">
+            <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">
+                {{this.gameService.gameSignal().teamWhite.score}}</div>
             <img src="../assets/images/Sprite-0003.png" class="rotate-90 h-full" alt="Your Image">
-            <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">{{this.gameService.blackScoreSignal()}}</div>
+            <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">
+                {{this.gameService.gameSignal().teamBlack.score}}</div>
         </div>
     </div>
 </div>
 
-    <div class="text-[2.5rem] lg:text-[4rem] text-red-800 flex justify-center mb-[1rem] lg:mb-[3rem] custom-font" *ngIf="rankedSignal() === 'ranked'; else hiddenContent">ranked</div>
-        <ng-template #hiddenContent>
-        <div class="hidden lg:hidden">
-         </div>
-        </ng-template>
+<div class="text-[2.5rem] lg:text-[4rem] text-red-800 flex justify-center mb-[1rem] lg:mb-[3rem] custom-font"
+    *ngIf="gameService.gameSignal().gameMode === 'RANKED'; else hiddenContent">ranked</div>
+<ng-template #hiddenContent>
+    <div class="hidden lg:hidden">
+    </div>
+</ng-template>
 
 <!-- Player names -->
 <div class="flex w-full my-auto lg:justify-center items-center text-[1.2rem]">
-    <div class="grid h-20 flex-grow card bg-accent-content rounded-box place-items-center ml-7 lg:ml-9 "> <!-- Added mx-4 for left and right margin -->
-        <div class="flex">{{player1.firstname}} {{player1.lastname}}<div class="text-orange-400">&nbsp;&nbsp;{{player1.score}}</div></div>
-        <div class="flex">{{player2.firstname}} {{player2.lastname}} <div class="text-orange-400">&nbsp;&nbsp;{{player2.score}}</div></div>
+    @if(gameService.gameSignal().teamWhite; as white) {
+    <div class="grid h-24 flex-grow card bg-accent-content rounded-box place-items-center ml-7 lg:ml-9 ">
+        <div class="flex text-[1.4rem]">
+            <div>TEAM</div>
+            <div class="text-orange-400">&nbsp; WHITE</div>
+        </div>
+        <!-- Added mx-4 for left and right margin -->
+        <div class="flex">{{white.playerOne?.name}}<div class="text-orange-400">
+                &nbsp;&nbsp;{{white.playerOne?.elo}}</div>
+        </div>
+        <div class="flex">{{white.playerTwo?.name}} <div class="text-orange-400">
+                &nbsp;&nbsp;{{white.playerTwo?.elo}}</div>
+        </div>
     </div>
-    <div class="divider divider-horizontal divider-warning">VS</div> <!-- Spacer for mobile view -->
-    <div class="grid h-20 flex-grow card bg-accent-content rounded-box place-items-center mr-7 lg:mr-9"> <!-- Added mx-4 for left and right margin -->
-        <div class="flex">{{player3.firstname}} {{player3.lastname}} <div class="text-orange-400">&nbsp;&nbsp;{{player3.score}}</div></div>
-        <div class="flex">{{player4.firstname}} {{player4.lastname}} <div class="text-orange-400">&nbsp;&nbsp;{{player4.score}}</div></div>
+    }
+    <div class="divider divider-horizontal divider-warning text-[1.5rem]">VS</div> <!-- Spacer for mobile view -->
+    @if(gameService.gameSignal().teamBlack; as black) {
+    <div class="grid h-24 flex-grow card bg-accent-content rounded-box place-items-center mr-7 lg:mr-9">
+        <div class="flex text-[1.3rem]">
+            <div>TEAM</div>
+            <div class="text-orange-400">&nbsp; BLACK</div>
+        </div>
+        <!-- Added mx-4 for left and right margin -->
+        <div class="flex">{{black.playerOne?.name}} <div class="text-orange-400">
+                &nbsp;&nbsp;{{black.playerOne?.elo}}</div>
+        </div>
+        <div class="flex">{{black.playerTwo?.name}} <div class="text-orange-400">
+                &nbsp;&nbsp;{{black.playerTwo?.elo}}</div>
+        </div>
+    </div>
+    }
+</div>
+
+<div class="flex w-full justify-between">
+    <div *ngIf="!this.renameWhite" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
+        <div class="tooltip tooltip-bottom tooltip-success" data-tip="of latest registered player">
+            <button class="btn btn-outline btn-error" (click)="changeName(whiteColor)">Change name</button>
+        </div>
+
+    </div>
+
+    <div *ngIf="this.renameWhite" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
+        <input id="input" (keyup)="onKey($event)" type="text" placeholder="{{this.lastRegisteredPlayerWhiteSignal()}}"
+            class="input input-bordered input-error w-full max-w-xs" />
+        <button class="btn btn-success ml-5" (click)="submit(this.whiteColor)">Submit</button>
+    </div>
+
+    <div *ngIf="!this.renameBlack" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
+        <div class="tooltip tooltip-bottom tooltip-success" data-tip="of latest registered player">
+            <button class="btn btn-outline btn-error" (click)="changeName(blackColor)">Change name</button>
+        </div>
+
+    </div>
+    <div *ngIf="this.renameBlack" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
+        <input id="input" (keyup)="onKey($event)" type="text" placeholder="{{this.lastRegisteredPlayerBlackSignal()}}"
+            class="input input-bordered input-error w-full max-w-xs" />
+        <button class="btn btn-success ml-5" (click)="submit(this.blackColor)">Submit</button>
     </div>
 </div>
