--- a/frontend/dig-kick-fe/src/app/feature/table-view/table-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/table-view/table-view.component.html
@@ -1,3 +1,4 @@
 <div class="grid-layout">
-    <app-table-display *ngFor="let tableId of tablesSignal()" [tableId]="tableId" class="tile"></app-table-display>
+    <app-table-display *ngFor="let tableName of tablesSignal()" [tableName]="tableName"
+        class="tile"></app-table-display>
 </div>
