--- a/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/score-view/score-view.component.html
@@ -11,7 +11,7 @@
       </thead>
       <tbody>
         <!-- loop over players and generate rows -->
-        <tr *ngFor="let player of data; let i = index" class="text-[1.25rem]">
+        <tr *ngFor="let player of scoreService.playersSignal(); let i = index" class="text-[1.25rem]">
           <th class="text-right">{{ i + 1 }}</th>
           <td>{{ player.name }} </td>
           <td class="text-right text-orange-400">{{ player.elo }}</td>
