--- a/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
@@ -1,10 +1,11 @@
+@if(gameService.gameSignal(); as game) {
 <div class="flex flex-col lg:flex-row justify-center items-center mt-3 mx-auto w-5/6 lg:mx-auto lg:w-2/3">
     <!-- Mobile view -->
     <div class="flex justify-center items-center mx-auto card h-32 w-64 bg-accent-content rounded-lg lg:hidden">
         <div class="flex justify-center items-center">
-            <div class="text-[6rem] mr-3">{{this.gameService.gameSignal().teamWhite.score}}</div>
+            <div class="text-[6rem] mr-3">{{game.teamWhite.score}}</div>
             <div class="text-[6rem]">:</div>
-            <div class="text-[6rem] ml-3">{{this.gameService.gameSignal().teamBlack.score}}</div>
+            <div class="text-[6rem] ml-3">{{game.teamBlack.score}}</div>
         </div>
     </div>
 
@@ -20,16 +21,16 @@
     <div class="hidden lg:flex items-center justify-center ">
         <div class="flex items-center space-x-[6rem]">
             <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">
-                {{this.gameService.gameSignal().teamWhite.score}}</div>
+                {{game.teamWhite.score}}</div>
             <img src="../assets/images/Sprite-0003.png" class="rotate-90 h-full" alt="Your Image">
             <div class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]">
-                {{this.gameService.gameSignal().teamBlack.score}}</div>
+                {{game.teamBlack.score}}</div>
         </div>
     </div>
 </div>
 
 <div class="text-[2.5rem] lg:text-[4rem] text-red-800 flex justify-center mb-[1rem] lg:mb-[3rem] custom-font"
-    *ngIf="gameService.gameSignal().gameMode === 'RANKED'; else hiddenContent">ranked</div>
+    *ngIf="game.gameMode === 'RANKED'; else hiddenContent">ranked</div>
 <ng-template #hiddenContent>
     <div class="hidden lg:hidden">
     </div>
@@ -79,8 +80,7 @@
     </div>
 
     <div *ngIf="this.renameWhite" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
-        <input id="input" (keyup)="onKey($event)" type="text"
-            placeholder="{{gameService.gameSignal().teamWhite.playerOne?.name}}"
+        <input id="input" (keyup)="onKey($event)" type="text" placeholder="{{game.teamWhite.playerOne?.name}}"
             class="input input-bordered input-error w-full max-w-xs" />
         <button class="btn btn-success ml-5" (click)="submit(this.whiteColor)">Submit</button>
     </div>
@@ -92,9 +92,9 @@
 
     </div>
     <div *ngIf="this.renameBlack" class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5">
-        <input id="input" (keyup)="onKey($event)" type="text"
-            placeholder="{{gameService.gameSignal().teamBlack.playerOne?.name}}"
+        <input id="input" (keyup)="onKey($event)" type="text" placeholder="{{game.teamBlack.playerOne?.name}}"
             class="input input-bordered input-error w-full max-w-xs" />
         <button class="btn btn-success ml-5" (click)="submit(this.blackColor)">Submit</button>
     </div>
 </div>
+}
