added word breaks

--- a/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
+++ b/frontend/dig-kick-fe/src/app/feature/game-view/game-view.component.html
@@ -45,10 +45,10 @@
             <div class="text-orange-400">&nbsp; WHITE</div>
         </div>
         <!-- Added mx-4 for left and right margin -->
-        <div class="flex">{{white.playerOne?.name}}<div class="text-orange-400">
+        <div class="flex break-words">{{white.playerOne?.name}}<div class="text-orange-400">
                 &nbsp;&nbsp;{{white.playerOne?.elo}}</div>
         </div>
-        <div class="flex">{{white.playerTwo?.name}} <div class="text-orange-400">
+        <div class="flex break-words">{{white.playerTwo?.name}} <div class="text-orange-400">
                 &nbsp;&nbsp;{{white.playerTwo?.elo}}</div>
         </div>
     </div>
@@ -61,10 +61,10 @@
             <div class="text-orange-400">&nbsp; BLACK</div>
         </div>
         <!-- Added mx-4 for left and right margin -->
-        <div class="flex">{{black.playerOne?.name}} <div class="text-orange-400">
+        <div class="flex break-words">{{black.playerOne?.name}} <div class="text-orange-400">
                 &nbsp;&nbsp;{{black.playerOne?.elo}}</div>
         </div>
-        <div class="flex">{{black.playerTwo?.name}} <div class="text-orange-400">
+        <div class="flex break-words">{{black.playerTwo?.name}} <div class="text-orange-400">
                 &nbsp;&nbsp;{{black.playerTwo?.elo}}</div>
         </div>
     </div>
